added my first code to the task

--- a/task-1.html
+++ b/task-1.html
@@ -21,33 +21,38 @@
         </div>
         <div class="flex" style="gap: 1rem" role="pagination">
             <!-- add buttons here -->
+            <button class="rounded w-8 h-8 bg-gray-300">1</button>
+            <button class="rounded w-8 h-8 bg-gray-300">2</button>
+            <button class="rounded w-8 h-8 bg-gray-300">3</button>
+            <button class="rounded w-8 h-8 bg-gray-300">4</button>
         </div>
     </main>
     <script>
-        const changePost = () => {
+        const changePost = (post_id) => {
             const url = 'https://jsonplaceholder.typicode.com/posts'
             const postUrl = `${url}/${post_id}`
 
-            fetch() // enter postUrl here
-                .then(res => ) // convert response here
-                .then() //added replaceContent here
+            fetch(postUrl) // enter postUrl here
+                .then(res => res.json() ) // convert response here
+                .then(replaceContent) //added replaceContent here
+                .catch((err) => console.log(err))
         }
 
-        const replaceContent = ({
-            title,
-            body
-        }) => {
-
+        const replaceContent = ({title,body}) => {
+            const heading = document.querySelector(".heading");
+            const para = document.querySelector(".para");
+            heading.textContent = title;
+            para.textContent = body;
         }
 
         const activateButtons = () => {
             // define buttons variable here
-
+            const btns = document.querySelectorAll("buttons");
             //loops through the buttons
-            buttons.forEach((button, i) => {
+            btns.forEach((btn, i) => {
                 const index = i + 1; // index variable
-                button.addEventListener('click', () => {
-
+                btn.addEventListener('click', () => {
+                    changePost(index);
                 })
             })
         }
