first commit for task 2

--- a/task-1.html
+++ b/task-1.html
@@ -47,7 +47,7 @@
 
         const activateButtons = () => {
             // define buttons variable here
-            const btns = document.querySelectorAll("buttons");
+            const btns = document.querySelectorAll("button");
             //loops through the buttons
             btns.forEach((btn, i) => {
                 const index = i + 1; // index variable
